@@ -2,14 +2,14 @@ exports.ok = 1;
 
 var User = SCHEMA('test').add('User');
 User.define('name', 'string(10)', true);
-User.setValidation(function(name, value) {
+User.setValidate(function(name, value) {
 	return value.length > 0;
 });
 
 NEWSCHEMA('filter').make(function(schema) {
 	schema.define('name', String, true, 'create');
 	schema.define('age', Number, true, 'update');
-	schema.setValidation(function() {
+	schema.setValidate(function() {
 		return false;
 	});
 });
